# xss-secure-guardrails-research

./: README.md
data/framework-labels/: new-xss-frameworks-done.csv  xss-framework-label-round2-updates.csv  xss-labeled-frameworks-1611967876.46879.csv
notebooks/: Main.ipynb  README.md  pyproject.toml
server/: .gitignore  README.md  pyproject.toml  semgrep.yaml
server/xss_research/: app.py  automate_diffs.py  get_parents.py  get_parents_and_diffs.sh  init_script.py  merge.py  models.py  util.py
server/xss_research/migrations/versions/: 5ae427c7ad96_add_not_relevant_to_triage_status_add_.py
server/xss_research/templates/: details.html  index.html
