[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["grayson <grayson@returntocorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
requests = "^2.25.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
