[tool.poetry]
name = "xss-research-server"
version = "0.0.1"
description = "UI for XSS research"
authors = ["grayson <grayson@returntocorp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
sqlalchemy = "^1.3.20"
flask_sqlalchemy = "^2.4.4"
pyopenssl = "^20.0.1"
pandas = "^1.1.5"
requests = "^2.25.0"
alembic = "^1.4.3"
Flask-MIgrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
